<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="18dp"
    android:paddingTop="40dp"
    tools:context=".ui.Bike.ShowBikeActivity">


    <TextView
        android:id="@+id/show_bike_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/NameBike"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="40sp" />


    <ImageView
        android:id="@+id/imageViewEdit"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:maxWidth="400dp"
        android:maxHeight="300dp"
        android:scaleType="centerInside" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/InformationBike"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/show_bike_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Description"
        android:textSize="24sp"
        android:textColor="@color/colorText"
        android:inputType="textMultiLine"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/InformationSize"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/show_bike_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Size"
        android:textSize="24sp"
        android:textColor="@color/colorText"
        android:inputType="text"/>





        <Button
            android:id="@+id/button_new_rent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorBackgroundButton"
            android:text="@string/ButtonBookBike"
            android:textColor="@color/colorTextButton" />





</LinearLayout>