<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.Rent.AddRentActivity">


    <EditText
        android:id="@+id/edit_rent_firstname"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/firstname"
        android:inputType="text"
        android:textColor="@color/colorText"
        android:textSize="26sp" />
    <EditText
        android:id="@+id/edit_rent_lastname"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/lastname"
        android:inputType="textMultiLine"
        android:textColor="@color/colorText"
        android:textSize="26sp" />


    <EditText
        android:id="@+id/edit_rent_number"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/number"
        android:inputType="phone"
        android:textColor="@color/colorText"
        android:textSize="26sp" />


    <TextView
        android:id="@+id/edit_rent_date"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/date"
        android:inputType="text"
        android:paddingLeft="4dp"
        android:paddingTop="30dp"
        android:textColor="@color/colorText"
        android:textSize="26sp" />


    <ImageButton
        android:id="@+id/pick_date"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorBackgroundButton"
        app:srcCompat="@android:drawable/ic_menu_today" />


</LinearLayout>